# alyrasign_prototype

./: .env  .env.example  .gitignore  .solana-version  .tool-versions  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.cursor/doc/: Readme_Struct.md  plan_dev.md  structure_projet.md
programs/alyra_sign/: Cargo.toml
programs/alyra_sign/src/: lib.rs
programs/alyra_sign_presence/: Cargo.toml
programs/alyra_sign_presence/src/: lib.rs
programs/alyra_sign_registry/: Cargo.toml
programs/alyra_sign_registry/src/: lib.rs
src/: theme.ts
src/app/: ClientLayout.tsx  layout.tsx  page.tsx
src/app/admin/: page.tsx  page_backup.tsx
src/app/etudiant/: page.tsx
src/app/formateur/: page.tsx
src/components/admin/: FormationList.tsx  FormationManager.tsx  InscriptionManager.tsx  PDAManager.tsx
src/components/etudiants/: EtudiantCard.tsx  EtudiantModal.tsx
src/components/formations/: FormationCard.tsx  FormationModal.tsx
src/components/layout/: AppBar.tsx  Navbar.tsx
src/components/presences/: PresenceManager.tsx
src/components/providers/: QueryProvider.tsx  WalletProvider.tsx
src/contexts/: AutoConnectProvider.tsx
src/hooks/: useAdminTransaction.ts  useBlockchain.ts  useConfirm.ts  useEtudiants.ts  useFormations.ts  useSessions.ts  useWallet.ts
src/idl/: alyra_sign.json  alyra_sign_presence.json  alyra_sign_registry.json
src/lib/: solana.ts
src/pages/: _app.tsx
src/stores/: authStore.ts  formationStore.ts
src/styles/: globals.css
src/types/: formation.ts
tests/: alyra_sign.ts
(+13 files in other folders)
