[package]
name = "alyra_sign_presence"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alyra_sign_presence"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = []

[dependencies]
anchor-lang = "=0.30.1"
solana-program = "=1.18.0"
ahash = "=0.7.8"
