[package]
name = "alyra_sign_presence"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alyra_sign_presence"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
solana-program = "=1.18.2"
ahash = "0.8.6"
